Fixing spacing at the top of business config

--- a/public/business-config.css
+++ b/public/business-config.css
@@ -77,6 +77,7 @@ button:active {
     width: 100%;
     max-width: 800px;  
     padding: 20px;
+    margin-top: 10%;
 }
 
 .form input,
